Font and styles structure

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,3 +47,4 @@ jobs:
         SOURCE: ./build
         TARGET: /var/www/infinity
         ARGS: '--verbose'  # Add any additional arguments if needed
+Caba78!
